--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,16 +8,20 @@
 </head>
 <body>
 
-<div class="container">
+<%= render 'layouts/navbar' %>
+
   <div class="container">
   <% flash.each do |key, value| %>
     <div class="alert alert-<%= key %>">
       <%= value %>
     </div>
   <% end %>
-</div>
 
   <%= yield %>
+
+</div>
+
+
 
   <%= debug(params) if Rails.env.development? %>
 </div>
