--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -12,7 +12,7 @@
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
-            <li><%= link_to current_user.name %></li>
+            <li><%= link_to current_user.name, user_path(current_user) %></li>
             <li><%= link_to 'Home', root_path %></li>
             <li><%= link_to 'Users' %></li>
             <li><%= link_to 'Notifications' %></li>
