--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -14,8 +14,8 @@
           <ul class="nav navbar-nav navbar-right">
             <li><%= link_to current_user.name, user_path(current_user) %></li>
             <li><%= link_to 'Home', root_path %></li>
-            <li><%= link_to 'Users' %></li>
-            <li><%= link_to 'Notifications' %></li>
+            <li><%= link_to 'Users', users_path %></li>
+            <li><%= link_to 'Notifications', notifications_user_path(current_user) %></li>
             <li><%= link_to 'Log out', destroy_user_session_path, method: :delete %></li>
           </ul>
         </div><!--/.nav-collapse -->
