--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -5,18 +5,23 @@
     </div>
   </div>
 
-<h2>Feed</h2>
-<div>
-  <% @posts.each do |p| %>
-  <p><strong><%= p.author.name %></strong></p>
-  <p><%= p.content %></p>
-  <p><%= p.likes %></p>
+<h2 class="text-center">Feed</h2>
+
+
+<% @posts.each do |post| %>
+<div class="well well-lg">
+  <h3><%= @users.find(post.author_id).name %></h3>
+  <small><%= time_ago_in_words(post.created_at) %></small>
+  <hr>
+  <p><%= post.content %></p>
+  <p><%= post.likes %></p>
   <strong>Comments:</strong>
   <div>
-    <% p.comments.each do |c| %>
+    <% post.comments.each do |c| %>
     <p><%= c.content %></p>
     <% end %>
   </div>
-  <% end %>
 </div>
+<% end %>
+
 
