--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -8,11 +8,12 @@
   </ul>
 </div>
 
+<%= render 'shared/create_post' %>
+
 <% @posts.each do |post| %>
 <div class="well well-lg">
   <h3><%= current_user.name %></h3>
-  <small><%= time_ago_in_words(post.created_at) %></small>
-  <hr>
+  <small><%= time_ago_in_words(post.created_at) %> ago</small>
   <p><%= post.content %></p>
   <p><%= post.likes %></p>
   <strong>Comments:</strong>
