--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -14,12 +14,17 @@
   <h3><%= @users.find(post.author_id).name %></h3>
   <small><%= time_ago_in_words(post.created_at) %></small>
   <p><%= post.content %></p>
-  <p><%= post.likes %></p>
   <fieldset>
-    <div>
+    <%= link_to "Like", likes_path(like: {post_id: post.id, user_id: current_user.id}),
+                                  method: 'post' %>
       <%= link_to "Comment", new_comment_path(post_id: post.id) %>
-    </div>
+
   </fieldset>
+  <% if post.likes.count == 1 %>
+    <p><%= post.likes.first.user.name %> likes this post</p>
+  <% elsif post.likes.count > 1 %>
+    <p><%= post.likes.first.user.name %> and <%= post.likes.count - 1 %> others like this post</p>
+  <% end %>
   <div>
     <% post.comments.each do |c| %>
     <strong><%= c.user.name %></strong>
