Added unlike to posts

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -15,16 +15,33 @@
   <small><%= time_ago_in_words(post.created_at) %></small>
   <p><%= post.content %></p>
   <fieldset>
-    <%= link_to "Like", likes_path(like: {post_id: post.id, user_id: current_user.id}),
+    <% post.likes.each do |like| %>
+      <% if like.user == current_user %>
+        <%= link_to "Unlike", like_path(post_id: post.id, user_id: current_user.id),
+                                  method: 'delete' %>
+      <% end %>
+    <% end %>
+
+      <%= link_to "Like", likes_path(like: {post_id: post.id, user_id: current_user.id}),
                                   method: 'post' %>
       <%= link_to "Comment", new_comment_path(post_id: post.id) %>
-
   </fieldset>
-  <% if post.likes.count == 1 %>
+
+  <% if post.likes.find_by(user: current_user.id) %>
+    <% if post.likes.count == 1 %>
+    <p>You like this post</p>
+    <% elsif post.likes.count > 1 %>
+      <p>You and <%= 'other'.pluralize(post.likes.count - 1) %>  like this post</p>
+    <% end %>
+  <% else %>
+    <% if post.likes.count == 1 %>
     <p><%= post.likes.first.user.name %> likes this post</p>
-  <% elsif post.likes.count > 1 %>
-    <p><%= post.likes.first.user.name %> and <%= post.likes.count - 1 %> others like this post</p>
+    <% elsif post.likes.count > 1 %>
+    <p><%= post.likes.last.user.name %> and <%= 'other'.pluralize(post.likes.count - 1) %> like this post</p>
+    <% end %>
   <% end %>
+
+
   <div>
     <% post.comments.each do |c| %>
     <strong><%= c.user.name %></strong>
