Fixed problem with Devise sign-in controller

--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -34,28 +34,30 @@
       <%= link_to image_tag('facebook') %>
     </div>
     <div id="navbar" class="navbar-collapse collapse">
-      <form class="navbar-form navbar-right">
-        <%= form_for(resource, as: resource_name, url: session_path(resource_name)) do |f| %>
+      <%= form_for(resource, as: resource_name, url: session_path(resource_name), html: {class: "navbar-form navbar-right"}) do |f| %>
         <div class="form-group">
-          <p><%= f.label :email, class: "signin_label" %><br />
-                    <%= f.email_field :email, autofocus: true, class: 'form-control' %></p>
-          <% if devise_mapping.rememberable? -%>
-          <p class="signin_text">
-            <%= f.check_box :remember_me %>
-            <%= f.label :remember_me %>
+          <p>
+            <%= f.label :email, class: "signin_label" %><br />
+            <%= f.email_field :email, autofocus: true, class: 'form-control' %>
           </p>
-          <% end -%>
+            <% if devise_mapping.rememberable? -%>
+            <p class="signin_text">
+              <%= f.check_box :remember_me %>
+              <%= f.label :remember_me %>
+            </p>
+            <% end -%>
         </div>
         <div class="form-group">
-          <p><%= f.label :password, class: "signin_label" %><br />
-                    <%= f.password_field :password, autocomplete: "off", class: 'form-control' %></p>
-          <%- if devise_mapping.recoverable? && controller_name != 'passwords' && controller_name != 'registrations' %>
-          <p><%= link_to "Forgot your password?", new_password_path(resource_name), class: "signin_text" %></p>
-          <% end -%>
+          <p>
+            <%= f.label :password, class: "signin_label" %><br />
+            <%= f.password_field :password, autocomplete: "off", class: 'form-control' %>
+          </p>
+            <%- if devise_mapping.recoverable? && controller_name != 'passwords' && controller_name != 'registrations' %>
+            <p><%= link_to "Forgot your password?", new_password_path(resource_name), class: "signin_text" %></p>
+            <% end -%>
         </div>
         <%= f.submit "Log in", class: 'btn btn-primary' %>
         <% end %>
-      </form>
     </div>
   </div>
 </nav>
