Added 'likes' to user show page

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,6 +1,6 @@
 <div class="jumbotron">
   <div class="container">
-  <h1><%= current_user.name %></h1>
+    <h1><%= current_user.name %></h1>
   </div>
   <ul class="nav nav-tabs">
     <li><%= link_to 'About', profile_user_path %></li>
@@ -15,12 +15,37 @@
   <h3><%= current_user.name %></h3>
   <small><%= time_ago_in_words(post.created_at) %> ago</small>
   <p><%= post.content %></p>
-  <p><%= post.likes %></p>
+
   <fieldset>
-    <div>
-      <%= link_to "Comment", new_comment_path(post_id: post.id) %>
-    </div>
+    <% if post.likes.any? %>
+      <% post.likes.each do |like| %>
+        <% if like.user == current_user %>
+        <%= link_to "Unlike", like_path(post_id: post.id, user_id: current_user.id),
+        method: 'delete' %>
+        <% end %>
+      <% end %>
+    <% end %>
+
+    <%= link_to "Like", likes_path(like: {post_id: post.id, user_id: current_user.id}),
+    method: 'post' %>
+    <%= link_to "Comment", new_comment_path(post_id: post.id) %>
   </fieldset>
+  <% if post.likes.any? %>
+    <% if post.likes.find_by(user: current_user.id) %>
+        <% if post.likes.count == 1 %>
+        <p>You like this post</p>
+      <% elsif post.likes.count > 1 %>
+        <p>You and <%= 'other'.pluralize(post.likes.count - 1) %>  like this post</p>
+      <% end %>
+    <% else %>
+      <% if post.likes.count == 1 %>
+      <p><%= post.likes.first.user.name %> likes this post</p>
+      <% elsif post.likes.count > 1 %>
+      <p><%= post.likes.last.user.name %> and <%= 'other'.pluralize(post.likes.count - 1) %> like this post</p>
+      <% end %>
+    <% end %>
+  <% end %>
+
   <div>
     <% post.comments.each do |c| %>
     <strong><%= c.user.name %></strong>
