--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -1,39 +1,44 @@
   <% @posts.each do |post| %>
   <div class="well well-lg">
-    <h3><%= post[:post].author.name %></h3>
-    <small><%= time_ago_in_words(post[:post].created_at) %></small>
-    <p><%= post[:post].content %></p>
+  <strong class="pull-right">
+      <% if post.author == current_user %>
+        <%= link_to "Delete", post_path(post), method: 'delete' %>
+      <% end %>
+      </strong>
+    <h3><%= post.author.name %></h3>
+    <small><%= time_ago_in_words(post.created_at) %></small>
+    <p><%= post.content %></p>
     <fieldset>
-      <% if post[:likes].any? %>
-        <% post[:likes].each do |like| %>
+      <% if post.likes.any? %>
+        <% post.likes.each do |like| %>
           <% if like.user == current_user %>
-          <%= link_to "Unlike", like_path(post_id: post[:post].id, user_id: current_user.id),
+          <%= link_to "Unlike", like_path(post_id: post.id, user_id: current_user.id),
           method: 'delete' %>
           <% end %>
         <% end %>
       <% end %>
 
-      <%= link_to "Like", likes_path(like: {post_id: post[:post].id, user_id: current_user.id}),
+      <%= link_to "Like", likes_path(like: {post_id: post.id, user_id: current_user.id}),
       method: 'post' %>
-      <%= link_to "Comment", new_comment_path(post_id: post[:post].id) %>
+      <%= link_to "Comment", new_comment_path(post_id: post.id) %>
     </fieldset>
-    <% if post[:likes].any? %>
-      <% if post[:likes].find_by(user: current_user.id) %>
-        <% if post[:likes].count == 1 %>
+    <% if post.likes.any? %>
+      <% if post.likes.find_by(user: current_user.id) %>
+        <% if post.likes.count == 1 %>
         <p>You like this post</p>
-        <% elsif post[:likes].count > 1 %>
-        <p>You and <%= 'other'.pluralize(post[:likes].count - 1) %>  like this post</p>
+        <% elsif post.likes.count > 1 %>
+        <p>You and <%= 'other'.pluralize(post.likes.count - 1) %>  like this post</p>
         <% end %>
     <% else %>
-      <% if post[:likes].count == 1 %>
-      <p><%= post[:likes].first.user.name %> likes this post</p>
+      <% if post.likes.count == 1 %>
+      <p><%= post.likes.first.user.name %> likes this post</p>
       <% elsif post.likes.count > 1 %>
-      <p><%= post[:likes].last.user.name %> and <%= 'other'.pluralize(post[:likes].count - 1) %> like this post</p>
+      <p><%= post.likes.last.user.name %> and <%= 'other'.pluralize(post.likes.count - 1) %> like this post</p>
       <% end %>
       <% end %>
     <% end %>
     <div>
-      <% post[:comments].each do |c| %>
+      <% post.comments.each do |c| %>
       <strong class="pull-right">
       <% if c.user == current_user %>
         <%= link_to "Delete", comment_path(c), method: 'delete' %>
