--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -8,6 +8,11 @@
   </ul>
 </div>
 
-<%= render 'shared/create_post' %>
+<% if @post %>
+  <%= render 'shared/update_post' %>
+<% else %>
+  <%= render 'shared/create_post' %>
+<% end %>
+
 
 <%= render @posts %>
