--- a/app/views/users/profile.html.erb
+++ b/app/views/users/profile.html.erb
@@ -21,27 +21,57 @@
     <div class="tab-pane" id="tab2">
       <h3>Work place</h3>
       <hr>
-      <p>Expanded info fo the user.</p>
+      <% if @info.work %>
+        <p><%= @info.work %></p>
+      <% else %>
+        <p>Not given</p>
+      <% end %>
+
     </div>
     <div class="tab-pane" id="tab3">
       <h3>University or High School Attended</h3>
       <hr>
-      <p>Expanded info fo the user.</p>
+      <% if @info.education %>
+        <p><%= @info.education %></p>
+      <% else %>
+        <p>Not given</p>
+      <% end %>
     </div>
     <div class="tab-pane" id="tab4">
       <h3>Residence Information</h3>
       <hr>
-      <p>Expanded info fo the user.</p>
+      <% if @info.address %>
+        <p><%= @info.address %></p>
+      <% else %>
+        <p>Not given</p>
+      <% end %>
     </div>
     <div class="tab-pane" id="tab5">
       <h3>Phone coordinates</h3>
       <hr>
-      <p>Expanded info fo the user.</p>
+      <% if @info.phone %>
+        <p><%= @info.phone %></p>
+      <% else %>
+        <p>Not given</p>
+      <% end %>
     </div>
     <div class="tab-pane" id="tab6">
       <h3>Date of birth</h3>
       <hr>
-      <p>Expanded info fo the user.</p>
+      <% if @info.birthday.strftime('%d %B %Y') %>
+        <p><%= @info.birthday.strftime('%d %B %Y') %></p>
+      <% else %>
+        <p>Not given</p>
+      <% end %>
     </div>
   </div>
+</div>
+
+<div class="text-center">
+<% if @info %>
+  <%= link_to 'Update profile', edit_info_path(@info), class: 'btn btn-success btn-lg' %>
+<% else %>
+<%= link_to 'Create profile', new_info_path, class: 'btn btn-success btn-lg' %>
+<% end %>
+
 </div>
