Send friend request

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,17 +1,8 @@
-
-<table class="table table-striped">
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th>Email</th>
-    </tr>
-  </thead>
-  <tbody>
-  <% @users.each do |user| %>
-    <tr>
-      <td><%= user.name %></td>
-      <td><%= user.email %></td>
-    </tr>
-  <% end %>
-  </tbody>
-</table>
+<% @users.each do |user| %>
+  <div style="padding: 10px 0;">
+    <h3><%= user.name %></h3>
+    <p><%= user.email %></p>
+    <%= link_to "Send friends request",
+             invitations_path(invitation: {from_user_id: current_user.id, to_user_id: user.id}), method: "post" %>
+  </div>
+<% end %>
