--- a/app/views/users/friends.html.erb
+++ b/app/views/users/friends.html.erb
@@ -4,9 +4,23 @@
   <% @invitations.each do |invitation| %>
   <h3><%= invitation.from_user.name %></h3>
   <p><%= invitation.from_user.email %></p>
-  <%= link_to "Accept" %>
+  <%= link_to "Accept", friendships_path(friendship: {
+                                                                user_id: current_user.id,
+                                                                friend_id: invitation.from_user.id
+                                                                },
+                                                              invitation: invitation.id),
+                                    method: "post" %>
   <% end %>
 </div>
+<% end %>
 
+<% if @friendships.any? %>
+<h1>Your friends</h1>
+<div>
+  <% @friendships.each do |friendship| %>
+  <h3><%= friendship.friend.name %></h3>
+  <p><%= friendship.friend.email %></p>
+  <% end %>
+</div>
 <% end %>
 
