--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,6 +1,6 @@
 <div class="jumbotron">
   <div class="container">
-    <h1><%= current_user.name %></h1>
+    <h1><%= @user.name %></h1>
   </div>
   <ul class="nav nav-tabs">
     <li><%= link_to 'About', profile_user_path %></li>
