--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -10,17 +10,13 @@
     <small><%= time_ago_in_words(post.created_at) %></small>
     <p><%= post.content %></p>
     <fieldset>
-      <% if post.likes.any? %>
-        <% post.likes.each do |like| %>
-          <% if like.user == current_user %>
-          <%= link_to "Unlike", like_path(post_id: post.id, user_id: current_user.id),
-          method: 'delete' %>
-          <% end %>
-        <% end %>
+      <% if post.likes.map{|like| like.user}.include? current_user %>
+        <%= link_to "Unlike", like_path(post_id: post.id, user_id: current_user.id),
+                                          method: 'delete' %>
+      <% else %>
+        <%= link_to "Like", likes_path(like: {post_id: post.id, user_id: current_user.id}),
+                                          method: 'post' %>
       <% end %>
-
-      <%= link_to "Like", likes_path(like: {post_id: post.id, user_id: current_user.id}),
-      method: 'post' %>
       <%= link_to "Comment", new_comment_path(post_id: post.id) %>
     </fieldset>
     <% if post.likes.any? %>
