Added post show page and links from notifications

--- a/app/views/users/notifications.html.erb
+++ b/app/views/users/notifications.html.erb
@@ -4,11 +4,11 @@
   <% @notifications.each do |notification| %>
   <div class="read-<%= notification.read %>">
     <% if notification.notifiable_type == 'Like' %>
-      <p><%= notification.notifiable.user.name %> likes your post "<%= notification.notifiable.post.content[0..10] %>..."</p>
+      <p><%= notification.notifiable.user.name %> likes your post "<%= link_to notification.notifiable.post.content[0..10], post_path(notification.notifiable.post) %>..."</p>
     <% elsif notification.notifiable_type == 'Comment' %>
-      <p><%= notification.notifiable.user.name %> commented on your post "<%= notification.notifiable.post.content[0..10] %>..."</p>
+      <p><%= notification.notifiable.user.name %> commented on your post "<%= link_to notification.notifiable.post.content[0..10], post_path(notification.notifiable.post) %>..."</p>
     <% elsif notification.notifiable_type == 'Invitation' %>
-      <p><%= notification.notifiable.from_user.name %> send you friend's request</p>
+      <p><%= link_to notification.notifiable.from_user.name, user_path(notification.notifiable.from_user) %> send you friend's request</p>
     <% end %>
     </div>
   <% notification.update_attributes(read: true) %>
