Changed static files in image_tags with urls

--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -8,7 +8,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <%= link_to image_tag('facebook'), root_url %>
+      <%= link_to image_tag('http://i.imgur.com/GaJGtSh.png'), root_url %>
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav navbar-right">
@@ -31,7 +31,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <%= link_to image_tag('facebook') %>
+      <%= link_to image_tag('http://i.imgur.com/GaJGtSh.png') %>
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <%= form_for(resource, as: resource_name, url: session_path(resource_name), html: {class: "navbar-form navbar-right"}) do |f| %>
