--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -23,6 +23,22 @@
   color: #fff;
 }
 
+.navbar-form{
+  color: #fff;
+}
+
+.navbar-form a{
+  color: #fff;
+}
+
+#remember-me {
+  margin-top: 5px;
+}
+
+#forgot-password{
+  margin-top: 5px;
+}
+
 .tab-pane > h3 {
   font-weight: 600;
   color: #999;
