--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -36,27 +36,32 @@
     <div id="navbar" class="navbar-collapse collapse">
       <%= form_for(resource, as: resource_name, url: session_path(resource_name), html: {class: "navbar-form navbar-right"}) do |f| %>
         <div class="form-group">
-          <p>
+          <div>
             <%= f.label :email, class: "signin_label" %><br />
             <%= f.email_field :email, autofocus: true, class: 'form-control' %>
-          </p>
+          </div>
             <% if devise_mapping.rememberable? -%>
-            <p class="signin_text">
+            <div id="remember-me">
               <%= f.check_box :remember_me %>
               <%= f.label :remember_me %>
-            </p>
+            </div>
             <% end -%>
         </div>
         <div class="form-group">
-          <p>
+          <div>
             <%= f.label :password, class: "signin_label" %><br />
             <%= f.password_field :password, autocomplete: "off", class: 'form-control' %>
-          </p>
+          </div>
             <%- if devise_mapping.recoverable? && controller_name != 'passwords' && controller_name != 'registrations' %>
-            <p><%= link_to "Forgot your password?", new_password_path(resource_name), class: "signin_text" %></p>
+            <div id="forgot-password">
+              <%= link_to "Forgot your password?", new_password_path(resource_name), class: "signin_text" %>
+            </div>
             <% end -%>
         </div>
-        <%= f.submit "Log in", class: 'btn btn-primary' %>
+        <div class="form-group">
+          <%= f.submit "Log in", class: 'btn btn-primary' %>
+        </div>
+
         <% end %>
     </div>
   </div>
