--- a/app/views/shared/_create_post.html.erb
+++ b/app/views/shared/_create_post.html.erb
@@ -1,13 +1,17 @@
-<div class="well clearfix">
-  <div class="form">
-  <%= form_for(:post, url: posts_path) do |f| %>
-    <div class="form-group">
-      <%= f.text_field :content, class: "form-control input-lg",
-                                                  placeholder: "What's on your mind..." %>
+<div class="container">
+  <div class="well clearfix">
+    <div class="form">
+    <%= form_for(:post, url: posts_path) do |f| %>
+      <div class="form-group">
+        <%= f.text_field :content, class: "form-control input-lg",
+                                                    placeholder: "What's on your mind..." %>
+      </div>
+      <div class="form-group">
+        <%= f.submit "Submit", class: "btn btn-default pull-right" %>
+      </div>
+    <% end %>
     </div>
-    <div class="form-group">
-      <%= f.submit "Submit", class: "btn btn-default pull-right" %>
-    </div>
-  <% end %>
-  </div>
 </div>
+</div>
+
+
