--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,6 +19,7 @@
   <% end %>
   </div>
 
+  <%= render 'shared/notifications' %>
 
   <%= yield %>
 
@@ -31,5 +32,4 @@
 <%= debug(params) if Rails.env.development? %>
 
 
-</body>
 </html>
