--- a/app/views/users/friends.html.erb
+++ b/app/views/users/friends.html.erb
@@ -1,38 +1,42 @@
-<div class="col-md-6">
-  <% if @friends.any? %>
-<h1>
-<% if @user == current_user %>
-  Your friends
-<% else %>
-  <%= @user.name %>'s friends
-<% end %>
-</h1>
-<div>
-  <% @friends.each do |friend| %>
-  <h3><%= link_to "#{friend.name}",
-                              user_path(friend) %></h3>
-  <p><%= friend.email %></p>
+<div class="container">
+  <div class="col-md-6">
+    <% if @friends.any? %>
+  <h1>
   <% if @user == current_user %>
-    <%= link_to "Unfriend", friendship_path(friend.id), method: "delete" %>
-    <% end %>
+    Your friends
+  <% else %>
+    <%= @user.name %>'s friends
   <% end %>
-</div>
-<% end %>
+  </h1>
+  <div>
+    <% @friends.each do |friend| %>
+    <h3><%= link_to "#{friend.name}",
+                                user_path(friend) %></h3>
+    <p><%= friend.email %></p>
+    <% if @user == current_user %>
+      <%= link_to "Unfriend", friendship_path(friend.id), method: "delete" %>
+      <% end %>
+    <% end %>
+  </div>
+  <% end %>
+  </div>
+
+  <div class="col-md-6">
+    <% if @invitations.any? %>
+  <h1>Pending Friends Requests</h1>
+  <div>
+  <% if @user == current_user %>
+      <% @invitations.each do |invitation| %>
+      <h3><%= link_to "#{invitation.from_user.name}",
+                                  user_path(invitation.from_user) %></h3>
+      <p><%= invitation.from_user.email %></p>
+      <%= link_to "Accept", invitation_path(id: invitation.id, invitation: {approved: true}), method: "patch" %>
+      <%= link_to "Deny", invitation_path(id: invitation.id, invitation: {approved: nil}), method: "patch" %>
+      <% end %>
+    <% end %>
+  </div>
+  <% end %>
+  </div>
 </div>
 
-<div class="col-md-6">
-  <% if @invitations.any? %>
-<h1>Pending Friends Requests</h1>
-<div>
-<% if @user == current_user %>
-    <% @invitations.each do |invitation| %>
-    <h3><%= link_to "#{invitation.from_user.name}",
-                                user_path(invitation.from_user) %></h3>
-    <p><%= invitation.from_user.email %></p>
-    <%= link_to "Accept", invitation_path(id: invitation.id, invitation: {approved: true}), method: "patch" %>
-    <%= link_to "Deny", invitation_path(id: invitation.id, invitation: {approved: nil}), method: "patch" %>
-    <% end %>
-  <% end %>
-</div>
-<% end %>
-</div>
+
