--- a/app/views/shared/_create_post.html.erb
+++ b/app/views/shared/_create_post.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
-  <div class="well clearfix">
+  <div class="well clearfix" id="create-post">
     <div class="form">
     <%= form_for(:post, url: posts_path) do |f| %>
       <div class="form-group">
