--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -35,18 +35,21 @@
         <% end %>
       <% end %>
       </div>
-      <div>
-        <% post.comments.each do |comment| %>
-        <strong class="pull-right">
-        <% if comment.user == current_user %>
-          <%= link_to "Edit", edit_comment_path(id: comment.id, post_id: post.id) %> |
-          <%= link_to "Delete", comment_path(comment), method: 'delete' %>
+      <% post.comments.each do |comment| %>
+      <div class="well">
+      <% if comment.user == current_user %>
+        <div class="dropdown pull-right">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><span class="caret"></span></a>
+          <ul class="dropdown-menu">
+            <li><%= link_to "Edit", edit_comment_path(id: comment.id, post_id: post.id) %></li>
+            <li><%= link_to "Delete", comment_path(comment), method: 'delete' %></li>
+          </ul>
+        </div>
         <% end %>
-        </strong>
         <strong><%= comment.user.name %></strong>
         <p><%= comment.content %></p>
-        <% end %>
       </div>
+      <% end %>
     </div>
 
   </div>
