Move links to about and friends pages

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -67,6 +67,15 @@ fieldset{
   margin-bottom: 20px;
 }
 
+#about{
+  display: inline-block;
+  margin-right: 20px;
+}
+
+#friends{
+  display: inline-block;
+}
+
 /*Styling for sign in page*/
 
 input[type="radio"], input[type="checkbox"]{
