--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -50,8 +50,19 @@
         <p><%= comment.content %></p>
       </div>
       <% end %>
+      <div class="well clearfix" id="post-comment">
+        <%= form_for(:comment, url: comments_path, html: {class: "form"}) do |f| %>
+          <%= f.hidden_field :post_id, value: post.id %>
+          <%= f.hidden_field :user_id, value: current_user.id %>
+          <div class="input-group">
+            <%= f.text_field :content, placeholder: "Write a comment...", class: "form-control" %>
+            <div class="input-group-btn">
+              <%= f.submit "Submit", class: "btn btn-default pull-right" %>
+            </div>
+          </div>
+        <% end %>
+      </div>
     </div>
-
   </div>
   <% end %>
   </div>
