--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,21 +1,13 @@
-<div class="form text-center">
-<strong>
-  <%= @post.content %>
-</strong>
-<br>
-<hr>
-
-  <%= form_for @comment do |f| -%>
-  <%= f.hidden_field :post_id, value: @post.id %>
-  <%= f.hidden_field :user_id, value: current_user.id %>
-  <div class="form-group">
-    <%= f.text_area :content, class: "form-control", rows: "3", id: "comment" %>
+<div class="well" id="comment-<%= comment.id %>">
+  <% if comment.user == current_user %>
+  <div class="dropdown pull-right">
+    <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><span class="caret"></span></a>
+    <ul class="dropdown-menu">
+      <li><%= link_to "Edit", edit_comment_path(comment), remote: true %></li>
+      <li><%= link_to "Delete", comment_path(comment), method: :delete, remote: true %></li>
+    </ul>
   </div>
-  <div>
-    <%= f.submit "Submit", class: "btn btn-default" %>
-  </div>
-<% end %>
-
+  <% end %>
+  <strong><%= comment.user.name %></strong>
+  <p><%= comment.content %></p>
 </div>
-
-
